--- a/.github/ISSUE_TEMPLATE/0_bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/0_bug_report.yaml
@@ -1,7 +1,7 @@
 name: 🐛 Bug Report
 description: Report an issue or possible bug
 title: "[bug]: "
-labels: [ "🐛 bug" ]
+labels: [ "🐛 bug", "bug" ]
 assignees: [ trueberryless ]
 body:
   - type: markdown
@@ -46,7 +46,7 @@ body:
     id: bug-reproduction
     attributes:
       label: Link to Minimal Reproducible Example
-      description: "Please create a minimal reproduction of the problem. Not sure how to create a minimal example? [Read Astro's well-written guide](https://docs.astro.build/en/guides/troubleshooting/#creating-minimal-reproductions)"
+      description: "Please create a minimal reproduction of the problem. Not sure how to create a minimal example? [Read this StackOverflow guide](https://stackoverflow.com/help/minimal-reproducible-example)"
       placeholder: 'https://stackblitz.com/abcd1234'
   - type: textarea
     attributes:
