--- a/.github/ISSUE_TEMPLATE/1_feature_request.yaml
+++ b/.github/ISSUE_TEMPLATE/1_feature_request.yaml
@@ -1,7 +1,7 @@
 name: 💡 Feature Request
 description: Suggest an improvement you’d like to see
 title: "[feat]: "
-labels: [ "⏫ enhancement" ]
+labels: [ "⏫ enhancement", "enhancement" ]
 assignees: [ trueberryless ]
 body:
   - type: markdown
